test: add generic specification unit tests + fix null values in filter map